fixed footer overflow issue

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,5 +1,5 @@
 .wrapper{
-    width: 100vw;
+    width: 100%;
     background-color: rgba(245,245,245,1.00);
 
 }
